--- a/moneyapp/bin/main/application.properties
+++ b/moneyapp/bin/main/application.properties
@@ -1,6 +1,3 @@
 spring.thymeleaf.enabled=true
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
