--- a/moneyapp/build.gradle
+++ b/moneyapp/build.gradle
@@ -23,4 +23,5 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
